turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:20: error: ';' expected but 'else' found.
				  else brosse(colors(0)); gauche(); avance()
                                  ^LangtonsAnt:22: error: ';' expected but 'else' found.
				  else brosse(colors(0)); droite(); avance()
                                  ^